# RL-Traffic-Signal-Controller

./: -o  .dockerignore  Dockerfile  Module 003 ： Deploying Envs [wlyQTeDSbRY].en.vtt  README.md  app.py  docker-compose.yml  explanation.txt  inference.py  openenv.yaml  pyproject.toml  q_table.npy  requirements.txt  train.py
agent/: dqn_agent.py  q_learning.py
api/: server.py
env/: __init__.py  traffic_env.py
server/: app.py
